---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var v : int const _ : 1 .. v := 'c'"
---
"v"@(FileId(1), 4..5) [ConstVar(Var, No)]: int
"_"@(FileId(1), 18..19) [ConstVar(Const, No)]: range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 27..28: cannot compute `v` at compile-time
| error in file FileId(1) for 27..28: `v` is a reference to a variable, not a constant
| note in file FileId(1) for 4..5: `v` declared here
error in file FileId(1) at 32..35: mismatched types
| note in file FileId(1) for 32..35: this is of type `char`
| note in file FileId(1) for 22..28: this is of type `1 .. {dynamic}`
| info: `char` is not assignable into `1 .. {dynamic}`
